work on getOptionsForReferenceToProperty

--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/_head.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/_head.html
@@ -2,10 +2,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="/formuladb-env/frmdb-apps/formuladb-io/static/favicon.png" type="image/png">
-<title>FormulaDB Themes</title>
+<title>Blog Post 4</title>
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
-<meta name="author" content="">
+<meta name="author" content="alex">
 <meta name="description" content="">
-<meta name="frmdb_display_date" content="">
+<meta name="frmdb_display_date" content="2020-03-21">
 </head>
