--- a/git/formuladb-env/frmdb-apps/hotel-booking/_head.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_head.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="/formuladb-env/frmdb-apps/hotel-booking/static/favicon.png" type="image/png">
-<title>King Hotel</title>
+<title>King Hotel Booking Page</title>
 <link rel="stylesheet" href="./formuladb-look.css">
 <link rel="stylesheet" href="/formuladb/css/ad-grid-balham-font.css">
 <meta name="author" content="">
