fix data binding limit for references

--- a/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/booking.html
@@ -74,13 +74,121 @@
             <div class="section_title text-center mb-3">
                 <h2 class="title_color">Available Rooms</h2>
                 <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast,</p>
-                <div class="card-deck">
-                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]">
+                <div class="card-deck frmdb-cards-wrap-3">
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~07-Ball">
                         <div class="frmdb-t-img overflow-hidden">
-                            <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                            <img src="theme/image/interior-2685521_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
                         </div>
                         <div class="card-body">
-                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Card 1 title</h5>
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Ball Room</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~06-Conference">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/living-room-581073_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Conference Room</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~05-EconomySigle">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/bedroom-1872196_1920.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Economy Sigle</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~04-EconomyDouble">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/room4.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Economy Double</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~03-Honeymoon">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/room3.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Honeymoon Suit</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~02-SigleDeluxe">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/room2.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Single Deluxe Room</h5>
+                            <h6>Card 1 subtitle</h6>
+                            <p>Quisque ornare, quam a blandit malesuada</p>
+                        </div>
+                        <div class="frmdb-t-card-action">
+                            <a href="javascript:void(0)" class="">Action</a>
+                        </div>
+                        <div class="frmdb-t-card-note">
+                            <span>INFO 
+                                <small>info</small>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card frmdb-t-card-img" data-frmdb-table="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[]" data-frmdb-record="RoomType~~01-DoubleDeluxe">
+                        <div class="frmdb-t-img overflow-hidden">
+                            <img src="theme/image/room1.jpg" alt="" class="" data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].picture">
+                        </div>
+                        <div class="card-body">
+                            <h5 data-frmdb-value="$FRMDB.$REFERENCE_TO_OPTIONS.RoomType[].name">Double Deluxe Room</h5>
                             <h6>Card 1 subtitle</h6>
                             <p>Quisque ornare, quam a blandit malesuada</p>
                         </div>
@@ -153,6 +261,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
