work on onprem profile; removed ag-grid-enterprise

--- a/formuladb/editor-new-app-modal.html
+++ b/formuladb/editor-new-app-modal.html
@@ -46,7 +46,7 @@
                         <div class="col-sm-9 input">
                             <select name="basedOnApp" class="form-control">
                                 <option>-</option>
-                                <option data-frmdb-table="$frmdb.apps[]" data-frmdb-value="$frmdb.apps[]">app 1</option>
+                                <option data-frmdb-table="$FRMDB.$App[]" data-frmdb-value="$FRMDB.$App[]">app 1</option>
                             </select>
                         </div>
 
